Set Java options for MapReduce history server