@@ -70,18 +70,7 @@ done
 # For Kerberos debugging, an extended option set logs more invormation
 # export HADOOP_OPTS="-Djava.net.preferIPv4Stack=true -Dsun.security.krb5.debug=true -Dsun.security.spnego.debug"
 export HADOOPHOSTNAME=`$bdev_bin_dir/$hostname_script $hostfile $loopback_ip`
-export HADOOP_OPTS="-Djava.net.preferIPv4Stack=true -Djava.io.tmpdir=$tmp_dir -DHADOOPHOSTNAME=${HADOOPHOSTNAME}"
-
-JAVA_BIN="${JAVA_HOME:+$JAVA_HOME/bin/}java"
-JAVA_VER_STR=$("$JAVA_BIN" -version 2>&1 | head -n 1 | cut -d '"' -f 2)
-JAVA_MAJOR_VER=$(echo "$JAVA_VER_STR" | awk -F '.' '{print ($1 == "1") ? $2 : $1}')
-
-if [ -n "$JAVA_MAJOR_VER" ] && [ "$JAVA_MAJOR_VER" -ge 9 ] 2>/dev/null; then
-    _ADD_OPENS="--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
-    
-    export HADOOP_OPTS="$HADOOP_OPTS $java_jpms_opts"
-fi
-
+export HADOOP_OPTS="-Djava.net.preferIPv4Stack=true -Djava.io.tmpdir=$tmp_dir -DHADOOPHOSTNAME=${HADOOPHOSTNAME} $java_jpms_opts"
 
 # Command specific options appended to HADOOP_OPTS when specified
 export HADOOP_NAMENODE_OPTS="-Dhadoop.security.logger=${HADOOP_SECURITY_LOGGER:-INFO,RFAS} -Dhdfs.audit.logger=${HDFS_AUDIT_LOGGER:-INFO,NullAppender} $HADOOP_NAMENODE_OPTS"
